# kosp_upload_bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  requirements.txt  run.sh  sample.config.ini
bot/: Flamingo.py  __init__.py  __main__.py  constants.py  kosp.py
bot/database/: __init__.py  maintainer_details.py
bot/document_processor/: base.py  direct_link.py  factory.py  gdrive.py
bot/plugins/: add_admin.py  add_maintainer.py  download.py  mirror.py  start.py
bot/plugins/Posts/: create_post.py
bot/plugins/admin_status/: add_admin.py  add_maintainer.py  add_support_group.py
bot/plugins/file_handler/: download.py  mirror.py
bot/utils/: parser.py  progress.py
src/: bot.rs  cancel_cmds.rs  cancel_tasks.rs  cfg.rs  main.rs  telegram.rs
src/database/: add_maintainer.rs  admin.rs  maintainer.rs  mod.rs  support_group.rs
src/document_processor/: direct_link.rs  document.rs  factory.rs  gdrive.rs  mod.rs
src/plugins/: admin.rs  cancel.rs  help.rs  maintainer.rs  mod.rs  ping.rs  release.rs  support_group.rs
