[package]
name = "upload-bot"
version = "0.1.0"
edition = "2021"
authors = ["Pranav <npv12@iitbbs.ac.in>"]

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
log = { version = "0.4.17", features = ["serde"] }
pretty_env_logger = "0.4"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
teloxide = { version = "0.10", features = ["macros", "auto-send", "throttle"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
toml = "0.5.9"
