[package]
name = "upload-bot"
version = "0.1.0"
authors = ["Pranav <npv12@iitbbs.ac.in>"]
edition = "2021"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
grammers-session = { git = "https://github.com/Lonami/grammers" }
log = { version = "0.4.17" }
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
simple_logger = "2.3.0"
tokio = { version = "1.5.0", features = ["full"] }
toml = "0.5.9"